project(wldump)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(src SRC_LIST)
file(GLOB HEADERS src/*.h src/*.h)
file(GLOB SOURCES src/*.cpp src/*.c)
find_package(Threads)
#find_package(LibEV)
find_library(LIBEV_LIBRARY NAMES ev)
find_path(LIBEV_INCLUDE_DIR NAMES ev.h ev++.h PATH_SUFFIXES include/ev include) # Find header
find_package_handle_standard_args(libev DEFAULT_MSG LIBEV_LIBRARY LIBEV_INCLUDE_DIR)
add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES})
target_link_libraries( ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} ${LIBEV_LIBRARY} )

IF ( "${CMAKE_BUILD_TYPE}" STREQUAL "Debug" )
    add_definitions(-DDEBUG_BUILD)
ENDIF()
